force-app/main/default/objects/LoanApplicant/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to account</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loan Application</relationshipLabel>
    <relationshipName>Loan_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>