force-app/main/default/objects/LoanApplicant/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Application number on the loan app</description>
    <formula>LoanApplication.ApplicationExtIdentifier</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Number</label>
    <type>Text</type>
</CustomField>