force-app/main/default/objects/LoanApplicant/fields/Application_Submit_Time__c.field-meta.xml
<CustomField>
    <fullName>Application_Submit_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Time that this applicant submitted the application for submission</description>
    <label>Application Submit Time</label>
    <type>DateTime</type>
</CustomField>