force-app/main/default/objects/LoanApplicant/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Customer Number consumed from the loan domain</description>
    <label>Customer Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>