force-app/main/default/objects/LoanApplicant/fields/Eligibility_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Accepted__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Sensitive_Personal_Information;Source_Loan_Domain</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Boolean that captures if eligibility accepted</description>
    <label>Eligibility Accepted</label>
    <type>Checkbox</type>
</CustomField>