force-app/main/default/objects/LoanApplicant/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Expiry date of loan application</description>
    <formula>LoanApplication.Expiry_Date__c</formula>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>