force-app/main/default/objects/LoanApplicant/fields/Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Applicant details updated time</description>
    <label>Last Updated Date</label>
    <type>DateTime</type>
</CustomField>