force-app/main/default/objects/LoanApplicant/fields/Living_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Living_Arrangement__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Loan Domain</complianceGroup>
    <description>Living arrangement details</description>
    <label>Living Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LIVING_BOARD</fullName>
            </value>
            <value>
                <fullName>LIVING_CARAVAN</fullName>
            </value>
            <value>
                <fullName>LIVING_WITH_PARENTS</fullName>
            </value>
            <value>
                <fullName>LIVING_HOME_MORTGAGE</fullName>
            </value>
            <value>
                <fullName>LIVING_HOME_NO_MORTGAGE</fullName>
            </value>
            <value>
                <fullName>LIVING_RENT</fullName>
            </value>
            <value>
                <fullName>LIVING_OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>