force-app/main/default/objects/LoanApplicant/fields/Living_Status__c.field-meta.xml
<CustomField>
    <fullName>Living_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Indicates the living status of this applicant</description>
    <label>Living Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LIVING_STATUS_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>LIVING_STATUS_BOARD</fullName>
                <label>Boarding</label>
            </value>
            <value>
                <fullName>LIVING_STATUS_CARAVAN</fullName>
                <label>Caravan</label>
            </value>
            <value>
                <fullName>LIVING_STATUS_WITH_PARENTS</fullName>
                <label>Living with Parents</label>
            </value>
            <value>
                <fullName>LIVING_STATUS_HOME_MORTGAGE</fullName>
                <label>Own Home - with mortgage</label>
            </value>
            <value>
                <fullName>LIVING_STATUS_HOME_NO_MORTGAGE</fullName>
                <label>Own Home - no mortgage</label>
            </value>
            <value>
                <fullName>LIVING_STATUS_RENT</fullName>
                <label>Renting</label>
            </value>
            <value>
                <fullName>LIVING_STATUS_OTHER</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>