force-app/main/default/objects/LoanApplicant/fields/Loan_Applicant_Group__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant_Group__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to loan applicant group</description>
    <label>Loan Applicant Group</label>
    <referenceTo>Loan_Applicant_Group__c</referenceTo>
    <relationshipLabel>Loan Applicants</relationshipLabel>
    <relationshipName>Loan_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>