force-app/main/default/objects/LoanApplicant/fields/Occupation_Code__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Sensitive_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Code of the occupation</description>
    <label>Occupation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>