force-app/main/default/objects/LoanApplicant/fields/Occupation_Description__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Description__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Sensitive Personal Information;Source - Loan Domain</complianceGroup>
    <description>Readable description of occupation, e.g. &quot;Carpenter&quot;</description>
    <label>Occupation Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Occupation_CAP</valueSetName>
    </valueSet>
</CustomField>