force-app/main/default/objects/LoanApplicant/fields/OCV_Id__c.field-meta.xml
<CustomField>
    <fullName>OCV_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>Link to customer page</description>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Account__c , Account__r.OCV_ID__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>