force-app/main/default/objects/LoanApplicant/fields/Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Party_ID__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - Loan Domain</complianceGroup>
    <description>OCV id of the applicant consumed from the loan domain</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Party ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>