force-app/main/default/objects/LoanApplicant/fields/Persona_Id__c.field-meta.xml
<CustomField>
    <fullName>Persona_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>This applicants persona identifier</description>
    <label>Persona Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>