force-app/main/default/objects/LoanApplicant/fields/Primary_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Primary_Borrower__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Loan Domain</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Boolean that captures if primary borrower</description>
    <label>Primary Borrower</label>
    <type>Checkbox</type>
</CustomField>