force-app/main/default/objects/LoanApplicant/fields/Privacy_Version_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Version_Accepted__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Version of privacy terms the applicant accepted.</description>
    <label>Privacy Version Accepted</label>
    <length>50</length>
    <type>Text</type>
</CustomField>