force-app/main/default/objects/LoanApplicant/fields/Sole_Applicant_Selected__c.field-meta.xml
<CustomField>
    <fullName>Sole_Applicant_Selected__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Loan Domain</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Boolean that captures if the application is for a sole applicant</description>
    <label>Sole Applicant Selected</label>
    <type>Checkbox</type>
</CustomField>