force-app/main/default/objects/LoanApplicant/fields/Sole_Income_Earner__c.field-meta.xml
<CustomField>
    <fullName>Sole_Income_Earner__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Loan Domain</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Boolean that captures if sole income earner</description>
    <label>Sole Income Earner</label>
    <type>Checkbox</type>
</CustomField>